--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
       <div id="message">ยินดีต้อนรับสู่โลกของ Web Development</div> 
     </div> 
  
-    <script> 
-      document.getElementById("btn").addEventListener("click", function () { 
-        const msg = document.getElementById("message"); 
-        msg.style.display = msg.style.display === "none" ? "block" : "none"; 
-      }); 
-    </script> 
-  </body> 
+<script src="script.js"></script> 
+</body> 
 </html> 
